<resources>
    <string name="app_name">Proyecto Android</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="anadir_kebab">añadir kebab</string>
    <string name="tel_fono_943_25_85_35">Teléfono: 943 25 85 35</string>
    <string name="horario_12_00_24_00">Horario: 12:00–24:00</string>
    <string name="direcci_n_plaza_de_marugame_8_20018_san_sebasti_n_guip_zcoa">Dirección: Plaza de Marugame, 8, 20018 San Sebastián, Guipúzcoa</string>
    <string name="logo">logo</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="email">email</string>
    <string name="cancelar">cancelar</string>
    <string name="refesco_cola">Pepsi: 1,00€</string>
    <string name="refresco_limon">Fanta limon: 1,00€</string>
    <string name="refresco_naranja">Fanta naranja: 1,00€</string>
    <string name="vino">Vino: 8,00€</string>
    <string name="cerveza">Cerveza: 1,50€</string>
    <string name="agua">Agua: 0,50€</string>
    <string name="textview">Introduce tus datos</string>
    <string name="enviar">enviar</string>
    <string name="todo">TODO</string>
    <string name="buscar_cliente">Buscar cliente</string>
    <string name="codigo_cliente">Codigo cliente</string>
    <string name="seleccion_lo_que_desees_hacer">SELECCION LO QUE DESEES HACER</string>
    <string name="actualizar">Actualizar</string>
    <string name="insertar">Insertar</string>
    <string name="borrar">Borrar</string>
    <string name="buscar">Buscar</string>
    <string name="insertar_tipo_kebab">Insertar Tipo Kebab</string>
    <string name="insertar_pedido">Insertar Pedido</string>
    <string name="precio">precio</string>
    <string name="nombre_tipo_kebab">nombre_tipo_kebab</string>
    <string name="cod_cliente">cod_cliente</string>
    <string name="cod_pedido">cod_pedido</string>
    <string name="pedido">Pedido</string>
    <string name="tipo_kebab">Tipo kebab</string>
    <string name="codigo">Codigo</string>
    <string name="tipos_kebab">Tipos Kebab</string>
    <string name="pedidos">Pedidos</string>
    <string name="actualizar_tipo_kebab">Actualizar Tipo Kebab</string>
    <string name="actualizar_pedido">Actualizar Pedido</string>
    <string name="codigo_pedido">codigo_pedido</string>
    <string name="cod_a_cambiar">cod a cambiar</string>
    <string name="codigo_a_cambiar">codigo a cambiar</string>

    <string-array name="tipo_kebab">
        <item>Döner</item>
        <item>Dürüm</item>
        <item>Lahmacum</item>
        <item>Shawarma</item>
        <item>Gyros</item>
    </string-array>

    <string-array name="precio_tipo_kebab">
        <item>4,00</item>
        <item>4,50</item>
        <item>5,00</item>
        <item>4,50</item>
        <item>5,00</item>
    </string-array>

    <string-array name="tipo_carne">
        <item>Pollo</item>
        <item>Ternera</item>
        <item>Cordero</item>
    </string-array>

    <string-array name="precio_tipo_carne">
        <item>0,50</item>
        <item>1,00</item>
        <item>0,50</item>
    </string-array>

    <string-array name="tamaño">
        <item>Normal</item>
        <item>Completo</item>
    </string-array>

    <string-array name="precio_tamaño">
        <item>0</item>
        <item>1,00</item>
    </string-array>

    <string-array name="cantidad">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="bebidas">
        <item>Refesco_cola</item>
        <item>Refresco_limon</item>
        <item>Refresco_naranja</item>
        <item>Vino</item>
        <item>Cerveza</item>
        <item>Agua</item>
    </string-array>

    <string-array name="precio_bebidas">
        <item>1,00</item>
        <item>1,00</item>
        <item>1,00</item>
        <item>8,00</item>
        <item>1,50</item>
        <item>0,50</item>
    </string-array>
</resources>
